objects/Tax_Area__c/Tax_Area__c.object-meta.xml
<CustomObject>
    <label>Tax Area</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>