objects/Tax_Area__c/fields/Sales_Tax_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Tax Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Tax Areas</relationshipLabel>
    <relationshipName>Tax_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>