objects/Tax_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Description__c</columns>
    <columns>Sales_Tax_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Blocked__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>